# casbin-fastapi-decorator

./: AGENTS.md  CHANGELOG.md  README.md  cliff.toml  codecov.yml  pyproject.toml  ruff.toml  taskfile.dist.yaml  ty.toml
.github/: dependabot.yml
.github/workflows/: ci-casdoor.yml  ci-core.yml  ci-db.yml  ci-jwt.yml  ci.yml  release.yml
examples/core/: README.md  main.py  policy.csv  pyproject.toml
examples/core-casdoor/: README.md  docker-compose.yml  pyproject.toml
examples/core-casdoor/casdoor/: app.conf  init_data.json
examples/core-casdoor/src/: authz.py  main.py  model.py
examples/core-db/: README.md  main.py  pyproject.toml
examples/core-db/casbin/: model.conf
examples/core-db/src/: auth.py  authz.py  db.py  main.py  model.py
examples/core-file/: README.md  pyproject.toml
examples/core-file/casbin/: policy.csv
examples/core-file/src/: auth.py  authz.py  main.py  model.py
examples/core-jwt/: README.md  main.py  policy.csv  pyproject.toml
examples/core-jwt/src/: auth.py  authz.py  main.py  model.py
examples/core/casbin/: policy.csv
examples/core/src/: auth.py  authz.py  main.py  model.py
src/casbin_fastapi_decorator/: __init__.py  _builder.py  _guard.py  _types.py
tests/: conftest.py  test_integration.py
tests/integration/: test_advanced_scenarios.py
tests/integration/permission_guard/access_subject/: act.py
tests/integration/permission_guard/async_enforcer/: act.py  error.py
tests/integration/permission_guard/auth_required/: act.py
tests/integration/permission_guard/cascading/: act.py
tests/integration/permission_guard/error_factory/: act.py
tests/unit/: test_access_subject.py  test_guard.py
tests/unit/access_subject/: act.py  error.py
tests/unit/permission_guard/: act.py
