[project]
name = "core-db"
version = "0.1.0"
description = "Casbin Fastapi Decorator DB Example"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi[standard]>=0.128.6",
    "casbin-fastapi-decorator",
    "casbin-fastapi-decorator-db",
    "aiosqlite>=0.20.0",
]

[tool.uv.sources]
casbin-fastapi-decorator = { workspace = true }
casbin-fastapi-decorator-db = { workspace = true }
