[project]
name = "core-file"
version = "0.1.0"
description = "casbin-fastapi-decorator file provider with hot-reload example"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "fastapi[standard]>=0.128.6",
    "casbin-fastapi-decorator",
    "casbin-fastapi-decorator-file",
]

[tool.uv.sources]
casbin-fastapi-decorator = { workspace = true }
casbin-fastapi-decorator-file = { workspace = true }
